--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,20 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/gamesFragment">
-
+    app:startDestination="@id/firstFragment2">
     <fragment
-        android:id="@+id/gamesFragment"
+        android:id="@+id/firstFragment2"
         android:name="com.example.madlevel5task2.GamesFragment"
-        android:label="fragment_game"
+        android:label="fragment_games"
         tools:layout="@layout/fragment_games" >
         <action
-            android:id="@+id/action_gamesFragment_to_addGameFragment"
-            app:destination="@id/addGameFragment" />
+            android:id="@+id/action_firstFragment2_to_secondFragment"
+            app:destination="@id/secondFragment" />
     </fragment>
     <fragment
-        android:id="@+id/addGameFragment"
-        android:name="com.example.madlevel5task2.GamesFragment"
+        android:id="@+id/secondFragment"
+        android:name="com.example.madlevel5task2.AddGameFragment"
         android:label="fragment_add_game"
         tools:layout="@layout/fragment_add_game" />
 </navigation>
